Corrections to overlapping cards and various adjustments

--- a/themes/rosenberg-foundation/css/global/search-form.scss
+++ b/themes/rosenberg-foundation/css/global/search-form.scss
@@ -17,6 +17,7 @@
         border: none;
         outline: none;
         margin-bottom: 8px;
+        background-color: transparent;
         &::placeholder {
             font-size: 16px;
             line-height: 24px;
